tests/valid_programs/basics/arrays.duck
fn main() {
    [[fn(){std::io::println("hallo");}]][0][0]();
    ([[{x: fn() { std::io::println("hallo from duck"); }}]] as {x: fn()}[][])[0][0].x();
}
